Add Result and Test models - Each result reflects an entry by a student on a particular test   and is linked to a Test - Each test has PK by its test_id that is ingested - Volume in the code directory to allow hot reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     # Official rails docker docs:
     # https://github.com/docker/awesome-compose/tree/master/official-documentation-samples/rails/
     command: "./bin/rails s -p 10005 -b '0.0.0.0'"
+    volumes:
+      - .:/rails
     ports:
       - "10005:10005"
